src/process/parser/SSECL/SSECLParser.java
// Generated from java-escape by ANTLR 4.11.1
package process.parser.SSECL;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.ArrayList;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SSECLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		BLOCK=18, TO=19, FROM=20, ID=21, INT=22, SEQ=23, WS=24, LINE_COMMENT=25, 
		MULT_COMMENT=26;
	public static final int
		RULE_description = 0, RULE_configuration = 1, RULE_entityState = 2, RULE_entityDef = 3, 
		RULE_attributeDef = 4, RULE_connectionDef = 5, RULE_connection = 6, RULE_functionDef = 7, 
		RULE_visualizationDef = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"description", "configuration", "entityState", "entityDef", "attributeDef", 
			"connectionDef", "connection", "functionDef", "visualizationDef"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'config'", "'{'", "'starter:'", "'mono:'", "'color:'", "'}'", 
			"'entities'", "'('", "')'", "'extends'", "'acts'", "'attributes'", "':'", 
			"'connections'", "'..'", "'functions'", "'visualization'", null, "'to'", 
			"'from'", null, null, "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "BLOCK", "TO", "FROM", "ID", "INT", 
			"SEQ", "WS", "LINE_COMMENT", "MULT_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SSECLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DescriptionContext extends ParserRuleContext {
		public ConfigurationContext config;
		public EntityStateContext entity;
		public EntityDefContext entityDef;
		public List<EntityDefContext> def = new ArrayList<EntityDefContext>();
		public ConfigurationContext configuration() {
			return getRuleContext(ConfigurationContext.class,0);
		}
		public EntityStateContext entityState() {
			return getRuleContext(EntityStateContext.class,0);
		}
		public List<EntityDefContext> entityDef() {
			return getRuleContexts(EntityDefContext.class);
		}
		public EntityDefContext entityDef(int i) {
			return getRuleContext(EntityDefContext.class,i);
		}
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).exitDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSECLVisitor ) return ((SSECLVisitor<? extends T>)visitor).visitDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescriptionContext description() throws RecognitionException {
		DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_description);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(18);
			((DescriptionContext)_localctx).config = configuration();
			setState(19);
			((DescriptionContext)_localctx).entity = entityState();
			setState(23);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(20);
				((DescriptionContext)_localctx).entityDef = entityDef();
				((DescriptionContext)_localctx).def.add(((DescriptionContext)_localctx).entityDef);
				}
				}
				setState(25);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConfigurationContext extends ParserRuleContext {
		public Token starter;
		public Token mono;
		public Token color;
		public List<TerminalNode> SEQ() { return getTokens(SSECLParser.SEQ); }
		public TerminalNode SEQ(int i) {
			return getToken(SSECLParser.SEQ, i);
		}
		public List<TerminalNode> ID() { return getTokens(SSECLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SSECLParser.ID, i);
		}
		public ConfigurationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_configuration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).enterConfiguration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).exitConfiguration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSECLVisitor ) return ((SSECLVisitor<? extends T>)visitor).visitConfiguration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConfigurationContext configuration() throws RecognitionException {
		ConfigurationContext _localctx = new ConfigurationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_configuration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			match(T__0);
			setState(27);
			match(T__1);
			setState(28);
			match(T__2);
			setState(29);
			((ConfigurationContext)_localctx).starter = match(ID);
			setState(30);
			match(SEQ);
			setState(31);
			match(T__3);
			setState(32);
			((ConfigurationContext)_localctx).mono = match(ID);
			setState(33);
			match(SEQ);
			setState(34);
			match(T__4);
			setState(35);
			((ConfigurationContext)_localctx).color = match(ID);
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEQ) {
				{
				setState(36);
				match(SEQ);
				}
			}

			setState(39);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EntityStateContext extends ParserRuleContext {
		public Token ID;
		public List<Token> entities = new ArrayList<Token>();
		public List<TerminalNode> ID() { return getTokens(SSECLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SSECLParser.ID, i);
		}
		public List<TerminalNode> SEQ() { return getTokens(SSECLParser.SEQ); }
		public TerminalNode SEQ(int i) {
			return getToken(SSECLParser.SEQ, i);
		}
		public EntityStateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entityState; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).enterEntityState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).exitEntityState(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSECLVisitor ) return ((SSECLVisitor<? extends T>)visitor).visitEntityState(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntityStateContext entityState() throws RecognitionException {
		EntityStateContext _localctx = new EntityStateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_entityState);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(T__6);
			setState(42);
			match(T__7);
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(43);
				((EntityStateContext)_localctx).ID = match(ID);
				((EntityStateContext)_localctx).entities.add(((EntityStateContext)_localctx).ID);
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEQ) {
					{
					{
					setState(44);
					match(SEQ);
					setState(45);
					((EntityStateContext)_localctx).ID = match(ID);
					((EntityStateContext)_localctx).entities.add(((EntityStateContext)_localctx).ID);
					}
					}
					setState(50);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(53);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EntityDefContext extends ParserRuleContext {
		public Token name;
		public Token extend;
		public Token ID;
		public List<Token> acts = new ArrayList<Token>();
		public AttributeDefContext attr;
		public ConnectionDefContext connectionDef;
		public List<ConnectionDefContext> connections = new ArrayList<ConnectionDefContext>();
		public FunctionDefContext function;
		public VisualizationDefContext vis;
		public List<TerminalNode> ID() { return getTokens(SSECLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SSECLParser.ID, i);
		}
		public AttributeDefContext attributeDef() {
			return getRuleContext(AttributeDefContext.class,0);
		}
		public FunctionDefContext functionDef() {
			return getRuleContext(FunctionDefContext.class,0);
		}
		public VisualizationDefContext visualizationDef() {
			return getRuleContext(VisualizationDefContext.class,0);
		}
		public List<ConnectionDefContext> connectionDef() {
			return getRuleContexts(ConnectionDefContext.class);
		}
		public ConnectionDefContext connectionDef(int i) {
			return getRuleContext(ConnectionDefContext.class,i);
		}
		public List<TerminalNode> SEQ() { return getTokens(SSECLParser.SEQ); }
		public TerminalNode SEQ(int i) {
			return getToken(SSECLParser.SEQ, i);
		}
		public EntityDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entityDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).enterEntityDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).exitEntityDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSECLVisitor ) return ((SSECLVisitor<? extends T>)visitor).visitEntityDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntityDefContext entityDef() throws RecognitionException {
		EntityDefContext _localctx = new EntityDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_entityDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			((EntityDefContext)_localctx).name = match(ID);
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(56);
				match(T__9);
				setState(57);
				((EntityDefContext)_localctx).extend = match(ID);
				}
			}

			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(60);
				match(T__10);
				setState(61);
				((EntityDefContext)_localctx).ID = match(ID);
				((EntityDefContext)_localctx).acts.add(((EntityDefContext)_localctx).ID);
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEQ) {
					{
					{
					setState(62);
					match(SEQ);
					setState(63);
					((EntityDefContext)_localctx).ID = match(ID);
					((EntityDefContext)_localctx).acts.add(((EntityDefContext)_localctx).ID);
					}
					}
					setState(68);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(71);
			match(T__1);
			setState(72);
			((EntityDefContext)_localctx).attr = attributeDef();
			setState(74); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(73);
				((EntityDefContext)_localctx).connectionDef = connectionDef();
				((EntityDefContext)_localctx).connections.add(((EntityDefContext)_localctx).connectionDef);
				}
				}
				setState(76); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__13 );
			setState(78);
			((EntityDefContext)_localctx).function = functionDef();
			setState(79);
			((EntityDefContext)_localctx).vis = visualizationDef();
			setState(80);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttributeDefContext extends ParserRuleContext {
		public Token ID;
		public List<Token> names = new ArrayList<Token>();
		public List<Token> types = new ArrayList<Token>();
		public List<TerminalNode> ID() { return getTokens(SSECLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SSECLParser.ID, i);
		}
		public List<TerminalNode> SEQ() { return getTokens(SSECLParser.SEQ); }
		public TerminalNode SEQ(int i) {
			return getToken(SSECLParser.SEQ, i);
		}
		public AttributeDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).enterAttributeDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).exitAttributeDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSECLVisitor ) return ((SSECLVisitor<? extends T>)visitor).visitAttributeDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeDefContext attributeDef() throws RecognitionException {
		AttributeDefContext _localctx = new AttributeDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_attributeDef);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(T__11);
			setState(83);
			match(T__1);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(84);
				((AttributeDefContext)_localctx).ID = match(ID);
				((AttributeDefContext)_localctx).names.add(((AttributeDefContext)_localctx).ID);
				setState(85);
				match(T__12);
				setState(86);
				((AttributeDefContext)_localctx).ID = match(ID);
				((AttributeDefContext)_localctx).types.add(((AttributeDefContext)_localctx).ID);
				setState(93);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(87);
						match(SEQ);
						setState(88);
						((AttributeDefContext)_localctx).ID = match(ID);
						((AttributeDefContext)_localctx).names.add(((AttributeDefContext)_localctx).ID);
						setState(89);
						match(T__12);
						setState(90);
						((AttributeDefContext)_localctx).ID = match(ID);
						((AttributeDefContext)_localctx).types.add(((AttributeDefContext)_localctx).ID);
						}
						} 
					}
					setState(95);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEQ) {
					{
					setState(96);
					match(SEQ);
					}
				}

				}
			}

			setState(101);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConnectionDefContext extends ParserRuleContext {
		public ConnectionContext connection;
		public List<ConnectionContext> connections = new ArrayList<ConnectionContext>();
		public List<ConnectionContext> connection() {
			return getRuleContexts(ConnectionContext.class);
		}
		public ConnectionContext connection(int i) {
			return getRuleContext(ConnectionContext.class,i);
		}
		public List<TerminalNode> SEQ() { return getTokens(SSECLParser.SEQ); }
		public TerminalNode SEQ(int i) {
			return getToken(SSECLParser.SEQ, i);
		}
		public ConnectionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_connectionDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).enterConnectionDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).exitConnectionDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSECLVisitor ) return ((SSECLVisitor<? extends T>)visitor).visitConnectionDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConnectionDefContext connectionDef() throws RecognitionException {
		ConnectionDefContext _localctx = new ConnectionDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_connectionDef);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__13);
			setState(104);
			match(T__1);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TO || _la==FROM) {
				{
				setState(105);
				((ConnectionDefContext)_localctx).connection = connection();
				((ConnectionDefContext)_localctx).connections.add(((ConnectionDefContext)_localctx).connection);
				setState(110);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(106);
						match(SEQ);
						setState(107);
						((ConnectionDefContext)_localctx).connection = connection();
						((ConnectionDefContext)_localctx).connections.add(((ConnectionDefContext)_localctx).connection);
						}
						} 
					}
					setState(112);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEQ) {
					{
					setState(113);
					match(SEQ);
					}
				}

				}
			}

			setState(118);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConnectionContext extends ParserRuleContext {
		public Token type;
		public Token lower;
		public Token range;
		public Token upper;
		public Token ID;
		public List<Token> targets = new ArrayList<Token>();
		public List<TerminalNode> INT() { return getTokens(SSECLParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(SSECLParser.INT, i);
		}
		public List<TerminalNode> ID() { return getTokens(SSECLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SSECLParser.ID, i);
		}
		public TerminalNode TO() { return getToken(SSECLParser.TO, 0); }
		public TerminalNode FROM() { return getToken(SSECLParser.FROM, 0); }
		public List<TerminalNode> SEQ() { return getTokens(SSECLParser.SEQ); }
		public TerminalNode SEQ(int i) {
			return getToken(SSECLParser.SEQ, i);
		}
		public ConnectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_connection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).enterConnection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).exitConnection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSECLVisitor ) return ((SSECLVisitor<? extends T>)visitor).visitConnection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConnectionContext connection() throws RecognitionException {
		ConnectionContext _localctx = new ConnectionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_connection);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			((ConnectionContext)_localctx).type = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==TO || _la==FROM) ) {
				((ConnectionContext)_localctx).type = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(121);
			((ConnectionContext)_localctx).lower = match(INT);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(122);
				((ConnectionContext)_localctx).range = match(T__14);
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INT) {
					{
					setState(123);
					((ConnectionContext)_localctx).upper = match(INT);
					}
				}

				}
			}

			setState(128);
			match(T__7);
			setState(129);
			((ConnectionContext)_localctx).ID = match(ID);
			((ConnectionContext)_localctx).targets.add(((ConnectionContext)_localctx).ID);
			setState(134);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(130);
					match(SEQ);
					setState(131);
					((ConnectionContext)_localctx).ID = match(ID);
					((ConnectionContext)_localctx).targets.add(((ConnectionContext)_localctx).ID);
					}
					} 
				}
				setState(136);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			}
			setState(137);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefContext extends ParserRuleContext {
		public Token content;
		public TerminalNode BLOCK() { return getToken(SSECLParser.BLOCK, 0); }
		public FunctionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).enterFunctionDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).exitFunctionDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSECLVisitor ) return ((SSECLVisitor<? extends T>)visitor).visitFunctionDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefContext functionDef() throws RecognitionException {
		FunctionDefContext _localctx = new FunctionDefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functionDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(T__15);
			setState(140);
			((FunctionDefContext)_localctx).content = match(BLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VisualizationDefContext extends ParserRuleContext {
		public Token content;
		public TerminalNode BLOCK() { return getToken(SSECLParser.BLOCK, 0); }
		public VisualizationDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_visualizationDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).enterVisualizationDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSECLListener ) ((SSECLListener)listener).exitVisualizationDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSECLVisitor ) return ((SSECLVisitor<? extends T>)visitor).visitVisualizationDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VisualizationDefContext visualizationDef() throws RecognitionException {
		VisualizationDefContext _localctx = new VisualizationDefContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_visualizationDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(T__16);
			setState(143);
			((VisualizationDefContext)_localctx).content = match(BLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}